--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "build-md",
   "version": "1.0.0",
   "description": "A small utility to bundle together multiple markdown files.",
+  "type": "module",
   "main": "buildmd.js",
   "author": "David Rojas <drojas@kuubit.com>",
   "license": "MIT",
